--- a/README
+++ b/README
@@ -1,1 +1,3 @@
+![Publish Status](https://github.com/ether/ep_subscript_and_superscript/workflows/Node.js%20Package/badge.svg) ![Backend Tests Status](https://github.com/ether/ep_subscript_and_superscript/workflows/Backend%20tests/badge.svg)
+
 Subscript and Superscript
