--- a/locales/fr.json
+++ b/locales/fr.json
@@ -4,6 +4,6 @@
 			"Verdy p"
 		]
 	},
-	"ep_subscript_and_superscript.subscript": "indice",
-	"ep_subscript_and_superscript.superscript": "exposant"
+	"ep_subscript_and_superscript.subscript": "Indice",
+	"ep_subscript_and_superscript.superscript": "Exposant"
 }
