--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,4 @@
 {
-  "ep_subscript_and_superscript.subscript" : "subscript",
-  "ep_subscript_and_superscript.superscript" : "superscript"
+  "ep_subscript_and_superscript.subscript" : "Subscript",
+  "ep_subscript_and_superscript.superscript" : "Superscript"
 }
